--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:current-slim
+      - image: circleci/node:12.18.4
     steps:
       - run:
           name: Install Docker Compose
