--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
       - run:
           name: Build docker 
           command: |
-            - docker-compose up -d
+            docker-compose up -d
