--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.18.4
+    working_directory: ~/
     steps:
       - run:
           name: Install Docker Compose
