--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/node:12.18.4
     working_directory: ~/repo
     steps:
+      - checkout
       - run:
           name: Install Docker Compose
           command: |
