--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run: 
+          name: Get Environment Variables from CircleCI
+          command: |
+            bash getEnv.sh
       - run:
           name: Install Docker Compose
           command: |
