--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,24 @@ jobs:
           name: Get Environment Variables from CircleCI
           command: |
             bash getEnv.sh
+
       - run:
-          name: Install Docker Compose
+          name: Push to master branch
           command: |
-            curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
-      - run:
-          name: Build docker 
-          command: |
-            ls -a
-            docker-compose up
+            bash getEnv.sh
+
+      # - run:
+      #     name: Install Docker Compose
+      #     command: |
+      #       curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+      #       chmod +x ~/docker-compose
+      #       sudo mv ~/docker-compose /usr/local/bin/docker-compose
+
+ 
+
+      # - run:
+      #     name: Build docker 
+      #     command: |
+      #       ls -a
+      #       docker-compose up
         
