--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# ENV
+.env
+
+# firebase Config json
+firebaseconfig.json
