Added Swagger and some signin, signup tests

--- a/.template.env
+++ b/.template.env
@@ -1,6 +1,15 @@
+# Steps:
 # Rename file into .env
 # Remove comments if it does not work
 
-# Uncomment below
+### If you are looking for FIREBASE_APPLICATION_CREDENTIALS
+### HERE IS LINK: https://cloud.google.com/docs/authentication/getting-started#windows
+### Alternatively, you can set env vars permanently in Menu > Search "env" > Environment variables > add in System variables
+### Remember to restart computer for best effect if not restart powershell
+
+####### Uncomment below #######
+
 # MONGO_URL = {YOUR_MONGO_URL}
+# TEST_MONGO = {YOUR_MONGO_URL}
+# SECRET = {YOUR_MONGO_URL}
 
