--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
           name: Get Environment Variables from CircleCI
           command: |
             bash scripts/getEnv.sh
+            sed -i 's/\s*$//' .env
       
       - run: 
           name: Get Service Account Key from environment Variables
