--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - setup_remote_docker
       - restore_cache:
           keys:
             # Find a cache corresponding to this specific package-lock.json
@@ -26,9 +27,7 @@ jobs:
           command: |
             bash scripts/getEnv.sh
             ls -a
-            echo $MONGO_URL
-            echo $TEST_MONGO
-            echo $SECRET
+            sed -i 's/\s*$//' .env
       
 
       - run: 
