--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - setup_remote_docker
       - restore_cache:
           keys:
             # Find a cache corresponding to this specific package-lock.json
@@ -26,8 +25,6 @@ jobs:
           name: Get Environment Variables from CircleCI
           command: |
             bash scripts/getEnv.sh
-            ls -a
-            sed -i 's/\s*$//' .env
       
 
       - run: 
@@ -44,7 +41,8 @@ jobs:
       - run:
           name: Push to master branch
           command: |
-            echo "Push to master"
+            git checkout testBranch
+            git merge testBranch
 
 
       # - run:
