Revert Back to normal

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     docker:
       - image: circleci/node:12.18.4
     working_directory: ~/repo
+    branches:
+      only: staging
     steps:
       - checkout
       - restore_cache:
