--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,20 @@ commands:
           name: Push Docker image to Heroku
 
 
+
+executors:
+  default:
+    description: |
+        A highly efficient and cached Ubuntu-based image. Consider using this executor or selecting an image for your language https://hub.docker.com/r/cimg/
+    docker:
+        - image: cimg/base:2020.01
+    parameters:
+        tag:
+            default: stable
+            description: |
+                Pick a specific cimg/base tag: https://hub.docker.com/r/cimg/base/tags
+            type: string
+
 jobs:
   test:
     docker:
