--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ workflows:
       - test:
           filters: 
             branches:
-              only: staging
+              only: testBranch
       - deploy:
           requires:
             - test
