--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,18 @@ orbs:
   heroku: circleci/heroku@1.2.2
 
 commands:
+  install:
+    description: |
+        Download and install the Heroku CLI. Will be skipped if the CLI is already installed in the system.
+    steps:
+        - run:
+            command: |
+                if [[ $(command -v heroku) == "" ]]; then
+                  curl https://cli-assets.heroku.com/install.sh | sh
+                else
+                  echo "Heroku is already installed. No operation was performed."
+                fi
+            name: Install Heroku CLI (If not installed)
   check-authentication:
     description: |
         Verifies the Heroku API key has been added so we can authenticate.
@@ -155,6 +167,7 @@ jobs:
         description: The name of your Heroku App. For backwards compatibility the literal value `$HEROKU_APP_NAME` is the default, so you can easily use this command by setting an environment variable called HEROKU_APP_NAME
         type: string
     steps:
+      - install
       - check-authentication
       - checkout
       - push-docker-image:
@@ -168,9 +181,6 @@ jobs:
         
    
      
-        
-
-
       
 
 
@@ -181,7 +191,7 @@ workflows:
       - test:
           filters: 
             branches:
-              only: testBranch
+              only: staging
       - deploy:
           requires:
             - test
