--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,11 +210,14 @@ workflows:
             - test
           filters:
             branches:
-              only: testBranch
+              only: 
+                - testBranch
       - test:
           filters: 
             branches:
-              only: testBranch
+              only: 
+               - staging
+               - testBranch
  
 
           
