--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,10 +146,13 @@ jobs:
       - run:
           name: Push to master branch
           command: |
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "official.hanson@gmail.com"
+            git config user.name "Deployment Bot"
             git checkout testBranch
             git merge staging
-            git commit 
-            git push origin testBranch
+            git commit --allow-empty -m "Trigger deployment"
+            git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/warmnuances/Brainfolio-prod.git testBranch
 
         
      
@@ -219,7 +222,6 @@ workflows:
             branches:
               only: 
                - staging
-               - testBranch
  
 
           
