--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,8 +147,8 @@ jobs:
           name: Push to master branch
           command: |
             git config credential.helper 'cache --timeout=120'
-            git config user.email "official.hanson@gmail.com"
-            git config user.name "Deployment Bot"
+            git config user.email "hlynn@student.unimelb.edu.au"
+            git config user.name "hlynn"
             git checkout testBranch
             git merge staging
             git commit
