--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,8 @@ jobs:
     docker:
       - image: circleci/node:12.18.4
     working_directory: ~/repo
+    environment:
+      GIT_COMMIT_DESC: git log --format=%B -n 1 $CIRCLE_SHA1
     steps:
       - checkout
       - restore_cache:
@@ -151,7 +153,7 @@ jobs:
             git config user.name "hlynn"
             git checkout testBranch
             git merge staging
-            git commit
+            git commit -m "$GIT_COMMIT_DESC"
             git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/warmnuances/Brainfolio-prod.git testBranch
 
         
